Feat: inscription utilisateur, redirection de route /register si user est connecté

--- a/templates/Layout/header.html.twig
+++ b/templates/Layout/header.html.twig
@@ -33,6 +33,7 @@
 					{% endif %}
 					<a href="{{ path('app.logout') }}" class="btn btn-danger">Deconnexion</a>
 				{% else %}
+					<a href="{{path('app.register')}}" class="btn btn-warning"> Inscription </a> 
 					<a href="{{ path('app.login') }}" class="btn btn-light">Connexion</a>
 				{% endif %}
 			</div>
