--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -29,6 +29,7 @@
 			<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
 			<button type="submit" class="btn btn-primary">Se connecter</button>
+			<a class="btn btn-secondary mt-1" href="{{path('app.register')}}">S'enregistrer</a>
 		</form>
 	</section>
 {% endblock %}
